--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pete's Portfolio</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
     <header>
@@ -21,8 +21,13 @@
             <h2>PDF Merger application</h2>
             <p class="project-description">An Application to merge PDF's.</p>
             <br><p><em>View in GitHub</em></p>
-            <span class="project-link"></span> <!-- Replace "#" with the link to your RPA project -->
+            <span class="project-link"></span>
         </a>
+        <a href="#" class="project">
+            <h2>Snake Game</h2>
+            <p class="project-description">A simple snake game.</p>
+            <br><p><em>View in GitHub</em></p>
+            <span class="project-link"></span> 
     </div>
 </body>
 </html>
