--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <br><p><em>View in GitHub</em></p>
             <span class="project-link"></span>
         </a>
-        <a href="#" class="project">
+        <a href="https://github.com/p-herring/snake-game" class="project">
             <h2>Snake Game</h2>
             <p class="project-description">A simple snake game.</p>
             <br><p><em>View in GitHub</em></p>
