Added about me, and a javascript script for the contact section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
             <p class="project-description">A simple snake game.</p>
             <br><p><em>View in GitHub</em></p>
             <span class="project-link"></span> 
+        </a>
+        <a href="#" class="project about-me">
+            <h2>About Me</h2>
+            <p class="project-description">Programming enthusiast. Diving head first into the world of programming and loving every second of it.</p>
+            <br><p><em>Contact me now</em></p>
+            <span class="project-link">Contact Me</span> 
+        </a>
     </div>
+    <div class="popup" id="contactPopup">
+        <div class="popup-content">
+            <span class="close" onclick="closePopup()">&times;</span>
+            <h2>Contact Information</h2>
+            <p>Email: herring.peterj@gmail.com<br><br>Phone: +61 456 758 300</p> <!-- Your email and phone number -->
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
