--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             <br><p><em>View in GitHub</em></p>
             <span class="project-link"></span>
         </a>
+        <a href="https://github.com/p-herring/job-search-scraper" class="project">
+            <h2>Job Search Scraper</h2>
+            <p class="project-description">A script to scrape SEEK for python jobs in Perth, WA and saves the results to a CSV file.</p>
+            <br><p><em>View in GitHub</em></p>
+            <span class="project-link"></span>
+        </a>
         <a href="https://github.com/p-herring/snake-game" class="project">
             <h2>Snake Game</h2>
             <p class="project-description">A simple snake game.</p>
