Added a contact link to the header of index.html. Edited script.js so that the contact link produced the same pop-up as the about me section. Changed the layout so that the projects are lined up in a: [ 1, 2 3, 4 ] pattern. Changed the min and max container sizes to keep them uniform. Changed the way the fill effect worked

--- a/index.html
+++ b/index.html
@@ -5,41 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pete's Portfolio</title>
     <link rel="stylesheet" href="styles.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> 
 </head>
 <body>
     <header>
+        <a href="#" class="contact-link"><i class="fas fa-phone"></i> Contact</a> 
         <h1>Pete's Portfolio</h1>
     </header>
     <div class="container">
         <a href="https://github.com/p-herring/Lane_detection" class="project">
             <h2>Lane Detecting Python Script</h2>
             <p class="project-description">A Python script that detects lanes in images or videos using computer vision techniques.</p>
-            <br><p><em>View in GitHub</em></p>
+            <p><em>View in GitHub</em></p>
             <span class="project-link"></span>
         </a>
         <a href="https://github.com/p-herring/pdfMerger" class="project">
             <h2>PDF Merger application</h2>
             <p class="project-description">An Application to merge PDF's.</p>
-            <br><p><em>View in GitHub</em></p>
+            <p><em>View in GitHub</em></p>
             <span class="project-link"></span>
         </a>
         <a href="https://github.com/p-herring/job-search-scraper" class="project">
             <h2>Job Search Scraper</h2>
             <p class="project-description">A script to scrape SEEK for python jobs in Perth, WA and saves the results to a CSV file.</p>
-            <br><p><em>View in GitHub</em></p>
+            <p><em>View in GitHub</em></p>
             <span class="project-link"></span>
         </a>
         <a href="https://github.com/p-herring/snake-game" class="project">
             <h2>Snake Game</h2>
             <p class="project-description">A simple snake game.</p>
-            <br><p><em>View in GitHub</em></p>
+            <p><em>View in GitHub</em></p>
             <span class="project-link"></span> 
         </a>
         <a href="#" class="project about-me">
             <h2>About Me</h2>
             <p class="project-description">Programming enthusiast. Diving head first into the world of programming and loving every second of it.</p>
-            <br><p><em>Contact me now</em></p>
-            <span class="project-link">Contact Me</span> 
+            <p><em>Contact me now</em></p>
+            <span class="project-link"></span> 
         </a>
     </div>
     <div class="popup" id="contactPopup">
