Added a video to the header background. Changed CSS properties to match and create a more uniform look across the webpage.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> 
 </head>
 <body>
-    <header>
+    <header class="header-bg">
+        <video class="video-bg" src="cover.mp4" autoplay muted loop></video> 
         <a href="#" class="contact-link"><i class="fas fa-phone"></i> Contact</a> 
         <h1>Pete's Portfolio</h1>
     </header>
