--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
         <h1>Pete's Portfolio</h1>
     </header>
     <div class="container">
-        <a href="https://github.com/p-herring/Lane_detection" class="project">
+        <a href="https://github.com/p-herring/Lane_detection" class="project" target="_blank">
             <h2>Lane Detecting Python Script</h2>
             <p class="project-description">A Python script that detects lanes in images or videos using computer vision techniques.</p>
             <p><em>View in GitHub</em></p>
             <span class="project-link"></span>
         </a>
-        <a href="https://github.com/p-herring/pdfMerger" class="project">
+        <a href="https://github.com/p-herring/pdfMerger" class="project" target="_blank">
             <h2>PDF Merger application</h2>
             <p class="project-description">An Application to merge PDF's.</p>
             <p><em>View in GitHub</em></p>
             <span class="project-link"></span>
         </a>
-        <a href="https://github.com/p-herring/job-search-scraper" class="project">
+        <a href="https://github.com/p-herring/job-search-scraper" class="project" target="_blank">
             <h2>Job Search Scraper</h2>
             <p class="project-description">A script to scrape SEEK for python jobs in Perth, WA and saves the results to a CSV file.</p>
             <p><em>View in GitHub</em></p>
             <span class="project-link"></span>
         </a>
-        <a href="https://github.com/p-herring/snake-game" class="project">
+        <a href="https://github.com/p-herring/snake-game" class="project" target="_blank">
             <h2>Snake Game</h2>
             <p class="project-description">A simple snake game.</p>
             <p><em>View in GitHub</em></p>
@@ -45,6 +45,10 @@
             <span class="project-link"></span> 
         </a>
     </div>
+    <footer class="header-bg">
+        <video class="video-bg" src="cover.mp4" autoplay muted loop></video>
+        <p class="footer-text">Made by Pete</p>
+    </footer>
     <div class="popup" id="contactPopup">
         <div class="popup-content">
             <span class="close" onclick="closePopup()">&times;</span>
